--- a/src/Styles/choose.css
+++ b/src/Styles/choose.css
@@ -28,6 +28,8 @@
         background-color: #F8F9F9;
         margin-left: 7%;
         margin-right: 7%;
+        padding-top: 1%;
+        padding-bottom: 4%;
         border-radius: 20px;
         /* border: 2px solid black; */
 
@@ -51,7 +53,7 @@
 .chooseReasonText{
         /* font-family: 'Inter'; */
         font-style: normal;
-        font-size: 11px;
+        font-size: 13px;
         text-align:justify;
         padding-left: 8%;
         padding-right: 8%;
