--- a/src/Styles/propertyHorizontalList.css
+++ b/src/Styles/propertyHorizontalList.css
@@ -7,19 +7,30 @@
         line-height: 48px;
         color: #264FE3;
         text-align: left;
-        padding-left: 17%; 
-        padding-right: 19%;
+        /* padding-left: 17%;  */
+        padding-right: 55%;
         display: block;
         justify-content: start;
 }
 
 .propertyHorizontalListContainer{
-        display: flex;
+      display: flex;
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-between;
         margin-left: 20px;
-        margin-right: 20px;
+        margin-right: 20px; 
+}
+
+@media (max-width: 600px) {
+
+        .propertyHorizontalListContainer{
+                margin-left: 0px;
+                margin-right: 20px; 
+        }
+        .propertyHorizontalListHeading{
+                padding-right: 0%;
+        }
 }
 
 .propertyHorizontalListArrowButton{
@@ -55,4 +66,11 @@
 .propertyLink:hover{
         text-decoration: none;
         color: #264FE3;
+}
+
+
+.propertyHorizontalListWholeContainer{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
 }
