--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -1,39 +1,47 @@
-
-
-.bannerContainer{
-        position: relative;
-        /* display: inline-block; */
-        min-width: 100%;
-        margin-top: 0;
-        padding: 0;
-      
+.bannerContainer {
+  position: relative;
+  min-width: 100%;
+  margin-top: 00px;
+  padding: 0;
 }
 
-.image {
-        width: 100%;
-        min-height: 50%;
-        object-fit: cover;
-      }
-
-
-
+.bannerImage {
+  width: 100%;
+  min-height: 50%;
+  object-fit: cover;
+}
 
 .overlay {
-         position: absolute;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        
-        text-align: center; 
-        font-family: 'Arbutus Slab';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 70px;
-        line-height: 88px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: 'Arbutus Slab';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 88px;
+  color: #CCCCCC;
+  mix-blend-mode: lighten;
+  border: 10px solid #000000;
+}
 
-        color: #CCCCCC; 
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  .overlay {
+    font-size: 40px;
+    top: 30%;
+    line-height: 50px;
+  }
+}
 
-        mix-blend-mode: lighten;
-        border: 10px solid #000000;
-
-      } 
+@media (max-width: 480px) {
+  .overlay {
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    line-height: 20px;
+  }
+}
