--- a/src/Styles/choose.css
+++ b/src/Styles/choose.css
@@ -2,6 +2,7 @@
         display: flex;
         flex-direction: column;
         margin-top: 4%;
+        align-items: center;
         margin-bottom: 10%;
 }
 
@@ -22,10 +23,14 @@
         margin-right: 10%;
         display: flex;
         flex-direction: row;
+        align-items: center;
         justify-content: space-around;
 }
 .chooseReason{
         background-color: #F8F9F9;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-left: 7%;
         margin-right: 7%;
         padding-top: 1%;
@@ -58,4 +63,19 @@
         padding-left: 8%;
         padding-right: 8%;
         color: #000000;
+}
+
+@media (max-width: 768px) {
+        .chooseReasonContainer{
+                margin-top: 8%;
+                margin-left: 10%;
+                margin-right: 10%;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                align-items: center;
+                gap: 20px;
+                justify-content: space-between;
+        }
+
 }
