--- a/src/Styles/testimonial.css
+++ b/src/Styles/testimonial.css
@@ -53,7 +53,7 @@
         .text-test {
           left: 5%;
           right: 5%;
-          padding: 2% 2% 2% 2%;
+          /* padding: 2% 2% 2% 2%; */
         }
       
         .heading2 {
@@ -62,15 +62,20 @@
         }
 
         .comma {
-                width: 20px;
-                height: 20px;
+                width: 30px;
+                height: 30px;
+                margin-top: 10%;
               }
       
         .quotation {
-                font-size: 10px;
-          line-height: 10px;
+                font-size: 12px;
+          line-height: 13px;
+          margin-top: 13%;
           padding-right: 10%;
           padding-left: 10%;
         }
+        .test-image {
+               height: 40vh;
+              }
       }
       
