--- a/src/Styles/property.css
+++ b/src/Styles/property.css
@@ -47,4 +47,9 @@
 .cardd{
         margin-left: 20px;
         margin-right: 20px;
+        color: #5A5A5A;
+}
+.cardd:hover{
+        text-decoration: none;
+        color: #5A5A5A;
 }
