--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -19,6 +19,9 @@
         align-items: center;
 
 }
+.footerLogo{
+        text-decoration: none;
+}
 
 .footerLogo p{
         display: inline;
@@ -41,6 +44,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-decoration: none;
 }
 .quinta-block:hover{
         text-decoration: none;
@@ -78,6 +82,7 @@
         flex-direction: row;
         min-width: 100%;
         justify-content: space-evenly;
+        
 }
 .company{
         display: flex;
@@ -111,12 +116,26 @@
         font-style: normal;
         font-size: 12px;
         color: #AEA6A6;
+        text-decoration: none;
 
 }
+.sub-heading2{
+        font-family: 'Inter';
+        font-style: normal;
+        font-size: 12px;
+        color: #AEA6A6;
+        text-decoration: none;
+
+}
+
 
 .sub-heading:hover{
         text-decoration: none;
+        color: #264FE3;
+        /* opacity: 0.6; */
+        transition: 0.3s;
 }
+
 .icon{
         width: 40;
         height: 40px;
@@ -131,10 +150,7 @@
 
 @media (max-width: 768px) {
 
-        .footer{
-                /* display: flex;
-                flex-direction: column; */
-        }
+       
         .text-area{
                 background-color: black;
                 /* position: absolute; */
@@ -187,13 +203,6 @@
                 /* justify-content: space-evenly; */
         }
 
-        .company{
-                /* display: flex;
-                flex-direction: column;
-                text-align: left;
-                gap:5%; */
-                /* width: 90%; */
-        }
 
         .social{
                 display: grid;
