--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -2,22 +2,23 @@
 
 .navbar{
 
-        /* background-color: #F5F5F5; */
-        /* position: fixed;
-        top: 0;
+        background-color: #F5F5F5;
+        /* position: fixed; */
+        /* top: 0;
         left: 0;
         width: 100%;
         z-index: 9999; */
         /* height: 50px; */
 }
 
-.logo p{
+.logo p, .logo{
         display: inline;
         font-family: 'Kadwa';
         font-style: normal;
         font-weight: 700;
         font-size: 30px;
         font-size: 3.2vh;
+        text-decoration: none;
 
         line-height: 60px;
         text-align: right;
