--- a/src/Styles/Banner.css
+++ b/src/Styles/Banner.css
@@ -1,19 +1,20 @@
 .bannerContainer {
   position: relative;
   min-width: 100%;
+  height: 500px;
   /* margin-top: 50px; */
   padding: 0;
 }
 
 .bannerImage {
   width: 100%;
-  min-height: 50%;
+  height: 100%;
   object-fit: cover;
 }
 
 .overlay {
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -28,24 +29,31 @@
 }
 
 /* Media queries for responsiveness */
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .overlay {
-    font-size: 40px;
-    top: 30%;
-    line-height: 50px;
+    font-size: 30px;
+    top: 40%;
+    left: 0%;
+    /* right: -20%; */
+    margin-left: 50%;
+    margin-right: -30%;
+    line-height: 40px;
+    text-align: center;
+  }
+  .bannerContainer {
+    position: relative;
+    min-width: 100%;
+    height: 400px;
+    padding: 0;
+  margin-bottom: -12vh;
+
+  }
+  
+  .bannerImage {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
   }
 }
 
-@media (max-width: 480px) {
-  .overlay {
-    font-size: 20px;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    line-height: 20px;
-  }
-  .bannerImage {
-    object-fit: cover;
-    height: 30vh;
-  }
-}
+
