--- a/src/Styles/choose.css
+++ b/src/Styles/choose.css
@@ -19,13 +19,78 @@
 }
 .chooseReasonContainer{
         margin-top: 8%;
-        margin-left: 10%;
-        margin-right: 10%;
+        width: 100%;
+        margin-left: 5%;
+        margin-right: 5%;
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-start;
 }
+.chooseReason{
+        background-color: #F8F9F9;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-bottom: 4%;
+        border-radius: 20px;
+        /* border: 2px solid black; */
+
+        /* border: 2px solid black; */
+
+}
+.chooseReasonIcon{
+        width: 80px;
+        height: 80px;
+        margin: 2%;
+        margin-top: 10%;
+       
+}
+.chooseReasonHeading{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 20px;
+        margin-top: 5%;
+
+        color: #000000;
+}
+
+.chooseReasonText{
+        /* font-family: 'Inter'; */
+        font-style: normal;
+        font-size: 15px;
+        text-align:justify;
+        padding-left: 8%;
+        padding-right: 8%;
+        color: #000000;
+}
+
+@media (max-width: 768px) {
+
+        .chooseContainer{
+                display: flex;
+                flex-direction: column;
+                margin-top: 10%;
+                align-items: center;
+                margin-bottom: 10%;
+        }
+        .chooseReasonContainer{
+                margin-top: 10%;
+                margin-left: 10%;
+                margin-right: 10%;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                align-items: center;
+                gap: 20px;
+                justify-content: space-between;
+        }
+
+        
+
 .chooseReason{
         background-color: #F8F9F9;
         display: flex;
@@ -34,14 +99,14 @@
         margin-left: 7%;
         margin-right: 7%;
         padding-top: 1%;
-        padding-bottom: 4%;
+        padding-bottom: 10%;
         border-radius: 20px;
         /* border: 2px solid black; */
 
 }
 .chooseReasonIcon{
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         margin: 2%;
         margin-top: 10%;
 }
@@ -58,24 +123,11 @@
 .chooseReasonText{
         /* font-family: 'Inter'; */
         font-style: normal;
-        font-size: 13px;
+        font-size: 12px;
         text-align:justify;
         padding-left: 8%;
         padding-right: 8%;
         color: #000000;
 }
-
-@media (max-width: 768px) {
-        .chooseReasonContainer{
-                margin-top: 8%;
-                margin-left: 10%;
-                margin-right: 10%;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                align-items: center;
-                gap: 20px;
-                justify-content: space-between;
-        }
 
 }
