--- a/src/Styles/propertyDetails.css
+++ b/src/Styles/propertyDetails.css
@@ -14,6 +14,11 @@
         /* height: 40%; */
 }
 
+.splide__slide img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
      
 
