about us template made

--- a/src/Styles/NoResultFound.css
+++ b/src/Styles/NoResultFound.css
@@ -11,7 +11,7 @@
          right: 0px;
 }
 
-h1{
+.noResultFoundHeading{
         font-family: 'Rubik';
         font-size: 40px;
         font-weight: 400;
