flex changed to grid.

--- a/src/Styles/property.css
+++ b/src/Styles/property.css
@@ -2,7 +2,7 @@
 
         color: #5A5A5A;
         text-decoration: none;
-        flex-basis: calc(25% - 20px);
+        /* width: 303px; */
        
 }
 
