--- a/src/Styles/propertyList.css
+++ b/src/Styles/propertyList.css
@@ -14,19 +14,17 @@
 }
 
 .propertyListContainer{
-        /* display: grid;
-        justify-items: center; 
-        align-items: center; 
+        display: grid;
         grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
         margin-left: 10%;
         margin-right: 10%;
-       */
-       display: flex;
+      
+       /* display: flex;
        flex-wrap: wrap;
        justify-content: space-evenly;
-       gap: 6%;
+       gap: 0%;
        margin-left: 10%;
-       margin-right: 10%;
+       margin-right: 10%; */
 
 }
 
